--- a/OE_Project_PY00202_MinhTV/pom.xml
+++ b/OE_Project_PY00202_MinhTV/pom.xml
@@ -98,6 +98,24 @@
           <version>1.9.2</version>
       </dependency>
 
+      <!-- Jakarta Mail (gửi email) -->
+
+
+      <!-- Jakarta Mail implementation -->
+      <dependency>
+          <groupId>com.sun.mail</groupId>
+          <artifactId>jakarta.mail</artifactId>
+          <version>2.0.2</version>
+      </dependency>
+
+      <!-- Jakarta Activation (required) -->
+      <dependency>
+          <groupId>com.sun.activation</groupId>
+          <artifactId>jakarta.activation</artifactId>
+          <version>2.0.1</version>
+      </dependency>
+
+
   </dependencies>
 
   <build>
@@ -146,5 +164,24 @@
           </plugin>
       </plugins>
     </pluginManagement>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.10.1</version>
+        <configuration>
+          <source>17</source>
+          <target>17</target>
+          <encoding>UTF-8</encoding>
+          <annotationProcessorPaths>
+            <path>
+              <groupId>org.projectlombok</groupId>
+              <artifactId>lombok</artifactId>
+              <version>1.18.42</version>
+            </path>
+          </annotationProcessorPaths>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
 </project>
